Fix styles on active menu option to view it correctly on small screens.

--- a/web/css/siwapp/layout.css
+++ b/web/css/siwapp/layout.css
@@ -65,7 +65,7 @@ a.xit:hover { background-position:-10px center; }
   position:relative;
   top:2px;
   padding-top:0.4em;
-  padding-bottom:1em; 
+  padding-bottom:4px; 
   border:1px solid #DCDCDC;
   border-bottom:none;
   background-color:white;
